--- a/.github/workflows/contract-parity-main-observer.yml
+++ b/.github/workflows/contract-parity-main-observer.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     env:
+      # Required: observer must run in explicit CI mode.
+      CI: "true"
       # Drift budget (hours). If unresolved drift exceeds this, we escalate.
       DRIFT_BUDGET_HOURS: "48"
       # Escalation labels applied to the rolling issue when budget breached.
@@ -36,6 +38,14 @@ jobs:
       DRIFT_PROJECT_NODE_ID: ""
     steps:
       - uses: actions/checkout@v4
+      - name: Require explicit CI=true
+        shell: bash
+        run: |
+          if [[ "${CI:-}" != "true" ]]; then
+            echo "Observer must run with CI=true explicitly."
+            echo "Fix: set env: CI: \"true\" at the job level in contract-parity-main-observer.yml"
+            exit 1
+          fi
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
