--- a/.github/workflows/contract-parity-main-observer.yml
+++ b/.github/workflows/contract-parity-main-observer.yml
@@ -1268,9 +1268,31 @@ jobs:
             // Comment "Resolved" with context and CI provenance markers.
             const CI_MARKER = "<!-- drift-ci-mode: true -->";
             const RESOLVED_MARKER = "<!-- drift-event: resolved -->";
+            const RESOLVED_PERIOD_MARKER = firstDetectedIso
+              ? `<!-- drift-resolved-for-period: ${firstDetectedIso} -->`
+              : null;
+
+            // Dedupe: only one resolved comment per drift episode (keyed by firstDetectedIso).
+            async function alreadyResolvedForThisPeriod() {
+              if (!RESOLVED_PERIOD_MARKER) return false;
+              const { data: comments } = await github.rest.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: existing.number,
+                per_page: 50
+              });
+              return (comments || []).some(c => {
+                const b = c.body || "";
+                return b.includes(RESOLVED_MARKER) && b.includes(RESOLVED_PERIOD_MARKER);
+              });
+            }
+
+            const alreadyResolved = await alreadyResolvedForThisPeriod();
+
             const comment = [
               CI_MARKER,
               RESOLVED_MARKER,
+              RESOLVED_PERIOD_MARKER,
               "",
               `✅ Resolved at **${now}**.`,
               `Parity is green against upstream \`main\`.`,
@@ -1282,12 +1304,16 @@ jobs:
               `_Rolling issue identity: dual-marker (fallback used: ${foundBy})._`
             ].filter(Boolean).join("\n");
 
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: existing.number,
-              body: comment
-            });
+            if (!alreadyResolved) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: existing.number,
+                body: comment
+              });
+            } else {
+              core.info(`Resolved comment already exists for period ${firstDetectedIso}; skipping.`);
+            }
 
             // Close the issue.
             await github.rest.issues.update({
